--- a/NumberRecognition_Practice2021/NumberRecognition_Practice2021/NumberRecognition_Practice2021.csproj
+++ b/NumberRecognition_Practice2021/NumberRecognition_Practice2021/NumberRecognition_Practice2021.csproj
@@ -52,6 +52,7 @@
     <Compile Include="NeuralNetworkControlForm .Designer.cs">
       <DependentUpon>NeuralNetworkControlForm .cs</DependentUpon>
     </Compile>
+    <Compile Include="Neuron.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="NeuralNetworkControlForm .resx">
