--- a/NumberRecognition_Practice2021/NumberRecognition_Practice2021/NumberRecognition_Practice2021.csproj
+++ b/NumberRecognition_Practice2021/NumberRecognition_Practice2021/NumberRecognition_Practice2021.csproj
@@ -54,6 +54,7 @@
       <DependentUpon>NeuralNetworkControlForm .cs</DependentUpon>
     </Compile>
     <Compile Include="Neuron.cs" />
+    <Compile Include="Perceptron.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="NeuralNetworkControlForm .resx">
