--- a/NumberRecognition_Practice2021/NumberRecognition_Practice2021/NumberRecognition_Practice2021.csproj
+++ b/NumberRecognition_Practice2021/NumberRecognition_Practice2021/NumberRecognition_Practice2021.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayPoints.cs" />
     <Compile Include="Layer.cs" />
     <Compile Include="NeuralNetworkControlForm .cs">
       <SubType>Form</SubType>
