--- a/NumberRecognition_Practice2021/NumberRecognition_Practice2021/NumberRecognition_Practice2021.csproj
+++ b/NumberRecognition_Practice2021/NumberRecognition_Practice2021/NumberRecognition_Practice2021.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayPoints.cs" />
+    <Compile Include="ImageProcessor.cs" />
     <Compile Include="Layer.cs" />
     <Compile Include="NeuralNetworkControlForm .cs">
       <SubType>Form</SubType>
