--- a/NumberRecognition_Practice2021/NumberRecognition_Practice2021/NumberRecognition_Practice2021.csproj
+++ b/NumberRecognition_Practice2021/NumberRecognition_Practice2021/NumberRecognition_Practice2021.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DataSet.cs" />
     <Compile Include="ImageProcessor.cs" />
     <Compile Include="Layer.cs" />
+    <Compile Include="LiteWebClient.cs" />
     <Compile Include="Network.cs" />
     <Compile Include="NeuralNetworkControlForm .cs">
       <SubType>Form</SubType>
